src/test/ui/methods/method-call-lifetime-args-unresolved.stderr
error[E0261]: use of undeclared lifetime name `'a`
  --> $DIR/method-call-lifetime-args-unresolved.rs:2:15
   |
LL |     0.clone::<'a>();
   |               ^^ undeclared lifetime

error: aborting due to previous error

For more information about this error, try `rustc --explain E0261`.
